Fix modal z-index, fix modal orientation bugs

--- a/public/styles.css
+++ b/public/styles.css
@@ -592,7 +592,7 @@ body {
 .modal {
   display: flex; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2; /* Sit on top */
   width: 100%;
   height: 100%;
   left: 0;
@@ -605,7 +605,7 @@ body {
   margin-left: 0;
   justify-self: center;
   align-self: center;
-  width: 200px;
+  width: 50%;
   height: auto;
 }
 /* Modal Content/Box */
@@ -619,12 +619,11 @@ body {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
-  height: auto;
+  width: fit-content; /* Could be more or less, depending on screen size */
+  height: fit-content;
   text-align: center;
 }
 form {
-  width: 50%;
   height: auto;
   display: flex;
   flex-direction: column;
